2009-01-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components/FileEntry.cs: Get the selected file before
	destroying the selector dialog. Fixes bug #461702 - Browsing for a
	strong name file does not work.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/objects.xml:
	* MonoDevelop.Components.mdp:
	* MonoDevelop.Components/TooltipWindow.cs:
	* MonoDevelop.Components/WindowTransparencyDecorator.cs: Moved
	TooltipWindow from MD.Projects.Gui.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.mdp: Set correct target framework.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Components.mdp:
	* MonoDevelop.Components/ListView.cs: Added list view widget.

2008-12-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Components.mdp:
	* MonoDevelop.Components.Commands/KeyBindingSet.cs:
	* MonoDevelop.Components.Commands/CommandManager.cs:
	* MonoDevelop.Components.Commands/KeyBindingScheme.cs:
	* MonoDevelop.Components.Commands/KeyBindingService.cs:
	* MonoDevelop.Components.Commands.ExtensionNodes/SchemeExtensionNode.cs:
	Moved some of the logic for handling key bindings into the new
	KeyBindingSet class. It makes it easier to work with schemes.

	* MonoDevelop.Components.Commands/ActionCommand.cs: Allow setting a
	specific default handler instance.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Components.mdp: Fix Makefile integration for
	AssemblyInfo.cs files.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* AssemblyInfo.cs.in: Add AssemblyInfo.cs files that are autogenerated
	from the addin manifests.

2008-11-24  Mike Kestner <mkestner@novell.com> 
